<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SlidingPaneLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mSlidingPaneLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="#000"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TableRow android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/icon_home" />

                <TextView
                    android:id="@+id/oldStory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="clickPane"
                    android:text="@string/old_story"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/icon_mystory" />

                <TextView
                    android:id="@+id/myStory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="clickPane"
                    android:text="@string/mine_story"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/icon_record" />

                <TextView
                    android:id="@+id/mRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="clickPane"
                    android:text="@string/browser_log"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/icon_mine" />

                <TextView
                    android:id="@+id/personalInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="clickPane"
                    android:text="@string/personal_info"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/icon_setting" />

                <TextView
                    android:id="@+id/sysSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="clickPane"
                    android:text="@string/sys_settings"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@color/exitColor"
            android:gravity="center"
            android:onClick="exit"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.qf.story.view.HomePageTitle
            android:id="@+id/mHomePageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/contentBackground" />
    </LinearLayout>
</android.support.v4.widget.SlidingPaneLayout>
