<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.qf.story.view.StoryTitle
        android:id="@+id/mLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/contentBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="75dp"
                    android:text="@string/sub_title"
                    android:textColor="@color/subTitleColor"
                    android:textSize="15sp" />
            </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.qf.story.view.Editor
                android:id="@+id/mUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.qf.story.view.Editor
                android:id="@+id/mUserPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@color/titleColor"
            android:text="@string/login"
            android:onClick="clickLogin"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:onClick="intentToRegister"
                android:padding="5dp"
                android:text="@string/login_hint"
                android:textColor="@color/titleColor" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
